# pylance_pytest

./: README.md  pyproject.toml
tests/: test_pylance_pytest.py
