[tool.poetry]
name = "pylance-pytest"
version = "0.1.0"
description = "Minimal reproduction of autocomplete bug in pytest test_* functions."
authors = ["Rohit Wagh <rohit_wagh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
